--- a/snowtum-shredders/app/products/[...product]/ProductComponents/Product.css
+++ b/snowtum-shredders/app/products/[...product]/ProductComponents/Product.css
@@ -195,3 +195,8 @@ input.spr-form-input, textarea.spr-form-input {
 textarea {
   line-height: 1.15;
 }
+
+/* ? Product Gallery */
+/* .product-gallery {
+  z-index: 9999;
+} */
